--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
         "phpunit/phpunit": "^4.8"
     },
     "autoload": {
-        "psr-4": { "CineFavela\\": [ "modules/" ] },
+        "psr-4": { 
+        	"CineFavela\\": [ "modules/" ],
+        	"CineFavela\\Usuario\\": [ "modules/Usuario/src/", "modules/Usuario/tests" ] 
+        },
         "files": [
         	"modules/Usuario/Module.php"
         ]
