Implementação da template engine twig

--- a/config/config.ini
+++ b/config/config.ini
@@ -5,3 +5,8 @@ dsn = "sqlite:data/db.sqlite"
 
 [mapper Respect\Relational\Mapper]
 db = [conn]
+
+[twigloader Twig_Loader_Filesystem]
+
+[twig Twig_Environment]
+loader = [twigloader]
