--- a/config/config.ini
+++ b/config/config.ini
@@ -1,5 +1,7 @@
 [router Respect\Rest\Router]
 
+[moduleManager CineFavela\Core\Module\ModuleManager]
+
 [conn PDO]
 dsn = "sqlite:../data/db.sqlite"
 
